<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/computerImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/computer_under_construction" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/computerImageView"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical"
            android:padding="@dimen/mainLinearLayoutPadding">

            <TextView
                android:id="@+id/businessNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/businessName"
                android:textAllCaps="true"
                android:textColor="@color/colorDefaultText"
                android:textSize="@dimen/businessNameTextSize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/businessAddress1TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/businessStreet1"
                android:textColor="@color/colorDefaultText"
                android:textSize="@dimen/defaultTextSize" />

            <TextView
                android:id="@+id/businessCityStateZipTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/businessCityStateZip"
                android:textColor="@color/colorDefaultText"
                android:textSize="@dimen/defaultTextSize" />

            <TextView
                android:id="@+id/businessPhoneTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/businessPhone"
                android:textColor="@color/colorDefaultText"
                android:textSize="@dimen/defaultTextSize" />

            <TextView
                android:id="@+id/businessDescription1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/businessDescription1PaddingTop"
                android:text="@string/businessDescription1"
                android:textColor="@color/colorDefaultText"
                android:textSize="@dimen/defaultTextSize" />

            <TextView
                android:id="@+id/businessDescription2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/businessDescription2"
                android:textColor="@color/colorDefaultText"
                android:textSize="@dimen/defaultTextSize" />

            <TextView
                android:id="@+id/businessDescription3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/businessDescription3"
                android:textColor="@color/colorDefaultText"
                android:textSize="@dimen/defaultTextSize" />

            <TextView
                android:id="@+id/businessDescription4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/businessDescription4"
                android:textColor="@color/colorDefaultText"
                android:textSize="@dimen/defaultTextSize" />

        </LinearLayout>
    </RelativeLayout>
</ScrollView>